# swiss-hr-ai

./: .gitignore  00_ARCHITECTURE_GLOBALE.md  01_GUIDE_GIT_GITHUB.md  12_DIVERGENCES_CAHIER_DES_CHARGES.md  ARHIANE.bat  README.md  SwissHR.bat  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
Base_Juridique/: LISEZ-MOI.txt
Bibliotheques/: LISEZ-MOI.txt
Bibliotheques/de/: LISEZ-MOI.txt
Bibliotheques/en/: LISEZ-MOI.txt
Bibliotheques/fr/: blacklist.json  formulations_validees.json
Entities/Entite_Demo/: LISEZ-MOI.txt  config.json
Templates/: LISEZ-MOI.txt
_app/: __init__.py
_app/core/: __init__.py  audit_trail.py  blacklist_detector.py  config.py  dossier_store.py  editor_base.py  entity_manager.py  formulation_library.py  llm_client.py  logger.py  module_base.py  module_registry.py  paths.py  questionnaire_engine.py  wizard_base.py
_app/modules/: __init__.py  _catalogue.json
_app/ui/: __init__.py  api.py  app.py
specs/cahier_des_charges/: 00_BRIEF_CLAUDE_CODE.md  01_SPEC_FONCTIONNEL.md  02_STRUCTURE_DOCX.md  03_FORMATS_ANNONCES.md  04_UX_FLUX.md  05_CATALOGUE_POSTES.md  (+8 more)
tests/: conftest.py  test_appearance_settings.py  test_audit_trail.py  test_blacklist_detector.py  test_certificats_module.py  test_config.py  test_documents_archival.py  test_dossier_store.py  test_entity_manager.py  test_entity_manager_cdc_fields.py  test_formulation_library.py  test_llm_client.py  test_logger.py  test_managers_api.py  test_module_registry.py  test_paths.py  test_questionnaire_engine.py  test_wizard_base.py
(+12 files in other folders)
