[project]
name = "arhiane"
version = "0.1.0"
description = "ARHIANE — L'IA qui remet les RH au centre. Boîte à outils RH locale pour PME suisses, 100 % hors ligne."
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "data", "Outputs", "Logs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # géré par le formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts libres dans les tests
